--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
       <section>
         <h2> Project 4: Silly Eyes</h2>
-        <p>Use Scratch to give Sprites an <strong>'emote'</strong> so that they communicate when clicked  </p>
+        <p>Use Scratch to creates <strong>'Silly Eyes'</strong> so that they move along the cursor  </p>
       </section>
      
       <!-- The first drawing and instructions go here -->     
