--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- Title shown in web browsers-->
-    <title>Add a title in here</title>
+    <title>Project 4 Silly Eyes</title>
 
     <!-- Import fonts from Google -->
     <link
