--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <!-- The page header code goes here -->
-    <header>
+    <header class="border-bottom">
       <h1>Introduction to Scratch</h1>
     </header>
 
