--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 
   <body>
     <!-- The page header code goes here -->
-    <header class="border-bottom">
+    <header class="border-bottom secondary">
       <h1>Introduction to Scratch</h1>
     </header>
 
     <!-- The main content for the web page goes between the main tags -->
-    <main>
-      <section>
+    <main class="primary">
+      <section class"tertiary">
         <h2> Project 4: Silly Eyes</h2>
-        <p>Use Scratch to creates <strong>'Silly Eyes'</strong> so that they move along the cursor  </p>
+        <p class="xcenter">Use Scratch to creates <strong>'Silly Eyes'</strong> so that they move along the cursor  </p>
       </section>
      
       <!-- The first drawing and instructions go here -->     
@@ -56,7 +56,7 @@
     </main>
 
     <!-- Footer code goes here. -->
-    <footer class="border-top">
+    <footer class="border-top secondary">
       
     </footer>
 
