--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
      
       <!-- The first drawing and instructions go here -->     
       <!--    <img src="love.png" alt="A line drawing of a smiling character with hearts for eyes." -->
-      <iframe class="dashed-border rounded" src="https://scratch.mit.edu/projects/495141114/embed" width="300" height="300"></iframe>
+      <iframe class="dashed-border rounded" class="wrap" src="https://scratch.mit.edu/projects/495141114/embed" width="300" height="300"></iframe>
       <p>Gobo watching</p>
      
       <!-- The second drawing and instructions go here -->
